<?xml version="1.0" encoding="utf-8"?>
	<!--
    Layouts for invite form
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:padding="5dip">

	<LinearLayout android:orientation="vertical"
		android:background="@drawable/panel_bg" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:padding="10dip">

		<LinearLayout android:id="@+id/invite_panel"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="center">
			<TextView android:id="@+id/invite_state_lbl"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/invite_state_lbl" />
			<TextView android:id="@+id/invite_state"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/invite_undefined_state_lbl" />
		</LinearLayout>

		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/remote_identity_lbl" />

		<EditText android:id="@+id/remote_identity"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:singleLine="true" android:background="@android:drawable/editbox_background">
		</EditText>

		<Spinner android:id="@+id/remote_identities"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_marginTop="5dip" android:drawSelectorOnTop="true"
			android:prompt="@string/remote_identity_prompt">
			<requestFocus />
		</Spinner>


		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/initial_mediatype_lbl" />

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<CheckBox android:id="@+id/initial_media1"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_margin="2px" android:text="@string/lbl_initial_media1" />

			<CheckBox android:id="@+id/initial_media2"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_margin="2px" android:text="@string/lbl_initial_media2" />

			<!--CheckBox android:id="@+id/initial_media3"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_margin="2px" android:text="@string/lbl_initial_media3" /-->
		</LinearLayout>

		<CheckBox android:id="@+id/local_anonym"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="@string/lbl_local_anonym" />


		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:padding="1dip">

			<Button android:id="@+id/invite_btn" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_gravity="right"
				android:text="@string/invite_btn" android:layout_marginTop="5dip" />

			<LinearLayout android:layout_weight="1.0"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />

			<Button android:id="@+id/show_refer_dlg_btn"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_gravity="right" android:text="@string/show_refer_dlg_btn"
				android:layout_marginTop="5dip" />
				
            <LinearLayout android:layout_weight="1.0"
                android:layout_width="wrap_content" android:layout_height="wrap_content" />

            <Button android:id="@+id/show_subscribe_dlg_btn"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="right" android:text="@string/show_subscribe_dlg_btn"
                android:layout_marginTop="5dip" />
		</LinearLayout>

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:padding="1dip">

			<Button android:id="@+id/btn_show_hard_state_presence"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_gravity="right" android:text="@string/btn_show_hard_state_presence"
				android:layout_marginTop="5dip" />

			<LinearLayout android:layout_weight="1.0"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />

			<Button android:id="@+id/show_phbk_btn"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_gravity="right" android:text="@string/show_phbk_btn"
				android:layout_marginTop="5dip" />
				
            <LinearLayout android:layout_weight="1.0"
                android:layout_width="wrap_content" android:layout_height="wrap_content" />

            <Button android:id="@+id/btn_show_jsr325_presence"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="right" android:text="@string/btn_show_jsr325_presence"
                android:layout_marginTop="5dip" />
		</LinearLayout>


		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:padding="1dip">

			<Button android:id="@+id/msrp_msg_act_btn"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_gravity="left" android:text="@string/msrp_msg_act_btn"
				android:layout_marginTop="5dip" />

            <LinearLayout android:layout_weight="1.0"
                android:layout_width="wrap_content" android:layout_height="wrap_content" />

            <Button android:id="@+id/conference_act_btn" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_gravity="right"
                android:text="@string/conference_act_btn" android:layout_marginTop="5dip" />
                
			<LinearLayout android:layout_weight="1.0"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />

			<Button android:id="@+id/msg_act_btn" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_gravity="right"
				android:text="@string/msg_act_btn" android:layout_marginTop="5dip" />
				
			<Button android:id="@+id/btn_status_test_subscribe_list"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/btn_status_test_subscribe_list" />
				
			<Button android:id="@+id/btn_status_test_subscribe"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/btn_status_test_subscribe" />
								
		</LinearLayout>
		

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:padding="1dip">

            <Button android:id="@+id/xdm_docs_btn"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="left" android:text="@string/xdm_docs_btn"/>
                
            <Button android:id="@+id/cont_list_btn"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_gravity="left" android:text="@string/cont_list_btn"/>

        </LinearLayout>

		


		<LinearLayout android:id="@+id/connection_panel"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="center_vertical|left">
			<ImageView android:id="@+id/connection_lbl"
				android:paddingRight="5px" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_gravity="center_vertical"
				android:src="@drawable/state_inactive" />
			<TextView android:id="@+id/connection_state"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:text="@string/connection_state_resumed_ims_disconnected" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
