<?xml version="1.0" encoding="utf-8"?>
	<!--
    Layouts for invite form
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:padding="5dip">

	<LinearLayout android:orientation="vertical"
		android:background="@drawable/panel_bg" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:padding="10dip">


        <LinearLayout android:id="@+id/msrp_chat_panel"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView android:id="@+id/msrp_chat_state_lbl"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/msrp_chat_state_lbl" />
            <TextView android:id="@+id/msrp_chat_state"
                android:layout_width="wrap_content" android:layout_height="wrap_content" 
                android:text="@string/msrp_chat_offline_lbl"/>
        </LinearLayout>


		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/remote_user" />
			
		<EditText android:id="@+id/remote_identity"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:singleLine="true" android:background="@android:drawable/editbox_background">
        </EditText>
			

        <Spinner android:id="@+id/remote_identities"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:drawSelectorOnTop="true"
            android:prompt="@string/remote_identity_prompt">
            <requestFocus />
         </Spinner>   

		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/message_text" />
		
		<EditText android:id="@+id/msrp_chat_message_text" android:layout_width="fill_parent" 
		    android:layout_height="70px" android:bufferType="editable"/>



        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:padding="1dip">
            <Button android:id="@+id/msrp_chat_back_btn" android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/msrp_chat_back_btn" />
                
            <Button android:id="@+id/msrp_chat_start_btn" android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/msrp_chat_start_btn" />
                
            <Button android:id="@+id/msrp_chat_stop_btn" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msrp_chat_stop_btn"/>
                
            <Button android:id="@+id/msrp_chat_send_btn" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msrp_chat_send_btn"/>
                
            <Button android:id="@+id/msrp_chat_file_btn" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msrp_chat_file_btn"/>
        </LinearLayout>
          
        <CheckBox android:id="@+id/msrp_chat_autoaccept" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/msrp_autoaccept"/>


        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:text="@string/msrp_chat_messages_lbl" />
            
        <ScrollView android:id="@+id/msrp_chat_message_history" android:layout_width="fill_parent"
            android:layout_height="120px" android:background="@android:drawable/editbox_background">
            
            <LinearLayout android:id="@+id/msrp_chat_message_history_layout" android:layout_width="fill_parent"
                    android:layout_height="wrap_content" android:orientation="vertical" >
            </LinearLayout>
            
        </ScrollView>
        
			
</LinearLayout>
</LinearLayout>
