<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:padding="5dip">

    <LinearLayout android:orientation="vertical"
        android:background="@drawable/panel_bg" android:layout_width="270px"
        android:layout_height="wrap_content" android:padding="10dip">


        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/msrp_chat_incoming_label"/>


        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:padding="10dip">
            
            <Button android:id="@+id/msrp_chat_incoming_accept_btn" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" 
                    android:text="@string/msrp_chat_incoming_accept_btn" />
                    
            <LinearLayout android:layout_weight="1.0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
                
            <Button android:id="@+id/msrp_chat_incoming_reject_btn" android:layout_width="wrap_content"
                    android:layout_height="wrap_content" 
                    android:text="@string/msrp_chat_incoming_reject_btn" />
        </LinearLayout>

    
    </LinearLayout>
</LinearLayout>
